fix flex wrap

--- a/src/components/Wrapper/Wrapper.scss
+++ b/src/components/Wrapper/Wrapper.scss
@@ -3,5 +3,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 2rem
+    gap: 2rem;
+    flex-wrap: wrap;
 }
